# google-map-scraper

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml  result.json  run.py  run_app.py
scraper/: run_scraper.py
scraper/config/: app.py  redis.py  resource.py
scraper/data/bo/: _scrap_pictures.py  base_search.py  browser_tab.py  complate_search.py  scrap_data.py
scraper/data/dao/: redis.py
scraper/processes/: city_listings_scraper.py
scraper/utils/: __init__.py  save_to_excel.py
server/apis/scrap_req/: router.py
server/apis/scrap_req/schema/: request.py  response.py
server/apis/status/: router.py
server/core/config/: app.py  redis.py
server/utils/: __init__.py  get_completed_requests.py  get_scraped_requests.py
src/: run.py  user_agents.py  مارکت در تهران.xlsx
src/config/: resource.py
src/core/: request.py
src/data/: user_agents.py
src/data/bo/: __init__.py  base_search.py  browser_tab.py  complate_search.py  goto_map.py  scrap_data.py
src/data/dao/: __init__.py  page.py
src/data/dto/: listing.py
src/processes/: __init__.py  city_listings_scraper.py  city_place_scraper.py  gmap.py
