[tool.poetry]
name = "google-map-scraper"
version = "0.1.0"
description = ""
authors = ["Amir Espahbodi <dev.amir.espahbodi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
playwright = "^1.48.0"
httpx = "^0.27.2"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
beautifulsoup4 = "^4.12.3"
ruff = "^0.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
