[tool.poetry]
name = "google-map-scraper"
version = "0.1.0"
description = ""
authors = ["Amir Espahbodi <dev.amir.espahbodi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.48.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
ruff = "^0.7.4"
lxml = "^5.3.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
fastapi = {extras = ["standard"], version = "^0.115.5"}
redis = "^5.2.0"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
